--- a/src/main/resources/templates/error/400.html
+++ b/src/main/resources/templates/error/400.html
@@ -2,17 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>400  not found</title>
+    <title>400  there is no land crossing</title>
 </head>
 <body>
 
-<h2>400 not found</h2>
-
-
-<p th:text="${error}">Error Info</p>
-<p th:text="${status}">Status</p>
-
-<p th:text="#{ERROR_MESSAGE}">SSS</p>
+<h2>400 there is no land crossing</h2>
 
 </body>
 </html>
