--- a/src/main/resources/templates/error/404.html
+++ b/src/main/resources/templates/error/404.html
@@ -2,18 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>404  not found</title>
+    <title>404 Country not found</title>
 </head>
 <body>
 
-<h2>404 not found</h2>
-
-
-<p th:text="${error}">Error Info</p>
-<p th:text="${status}">Status</p>
-
-
-<p th:text="${ERROR_MESSAGE}">SSS</p>
+<h2>404 Country not found</h2>
 
 </body>
 </html>
